--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,9 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>Disney+ Clone</title>
-  <link rel="icon" type="image/png"
-    href="https://i.seadn.io/gae/ftZIxFXAm8B6tyrxrMwlqZmIikccGThYDKPq-Wb9Ibj84LJSr06wUTx0cXduQ5zdTiz9Ut6g6Cm4RpxBnRIj1y4PeWCqBbGhm1IZ?auto=format&w=1000">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 </head>
 
 <body>
